--- a/Tarea 3.ipynb
+++ b/Tarea 3.ipynb
@@ -8,9 +8,7 @@
    },
    "source": [
     "# Tarea 3 \n",
-    "### Implementar LDA y LDAseq a tavés de Gensim\n",
-    "\n",
-    "Fernanda Weiss \n",
+    "### Fernanda Weiss \n",
     "201373536-3"
    ]
   },
@@ -189,17 +187,6 @@
     "\n",
     "lda10 = ldamodel.LdaModel(corpus, num_topics=10, id2word = dictionary)\n",
     "lda10.save(\"res_lda/lda_10/lda_10\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "#  ¿Qué información puede desprender de cada tópico? ¿Tienen las palabras descriptivas de cada tópico coherencia con los documentos pertenecientes al corpus? ¿Cómo afecta la cantidad definida de tópicos a la distribución de estos ?\n",
-    "\n"
    ]
   },
   {
@@ -410,7 +397,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "En general, se observa que los resultados obtenidos con LDA no son buenos, pues ninguna elección de cantidad de tópicos entrega buenos tópicos que describan los tópicos del corpus, aunque se esperaría que cinc tópicos entregue estos buenos resultados, pero no es así."
    ]
@@ -446,13 +436,6 @@
     "Primero se procede a entrenar nuevamente el corpus entregado, pero esta vez utilizando el algoritmo LdaSeq, el cual está basado en el código orginal de DTM de Blei. Para el entrenamiento se utilizarán 5 tópicos con una varianza *0.001*, y además se debe entregar como parámetro la cantidad de documentos por intervalo de tiempo, que en este caso serían los documentos para cada mes, con 3 intervalos de tiempo, dado que los documentos pertenecen a 3 meses (marzo, abril y mayo): 438 documentos para el primer intervalo, 430 para el segundo intervalo y 456 para el último intervalo.\n",
     "\n",
     "Al igual que el LDA, se introduce el parámetro *id2word=dictionary* en la ejecución, para realizar el pareo entre el id de las palabras del diccionario y las palabras."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Para cada uno de los intervalos de tiempo, observe la distribución topic_word de cada tópico ¿Que puede observar en la evolución de estos?"
    ]
   },
   {
@@ -651,7 +634,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Al analizar los resultados entregados, en primer lugar, es posible notar que las palabras más relevantes en un tóṕico lo realizan con mayor proporción que en LDA. Es notoría la superioridad de los resultados de DTM respecto a LDA, dado que para 5 tópicos, es claro que cada uno representa un tema de corpus:\n",
     "* Primer Tópico: Política. La palabra que tiene mayor infuencia es *government* con una proporción de 0.007, seguida por palabras como *blair*, *film* y *labour* con un 0.006. En este punto, es importante notar que la palabra *film* es una palabra influyente en el tópico, sin embargo, habla sobre el tema de entretención, más que de política.\n",
@@ -804,14 +790,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Al analizar los resultado entregados para el segundo time slide, de abril del 2016, es posible ver que cada tópico sigue hablando cada uno de un tema distinto, no existe una unión entre tópicos, ni una separación de algún tópico. \n",
     "* Primer Tópico: Política. La palabra que tiene mayor infuencia es *government* con una proporción de 0.007, seguida por palabras como *blair*, *film* y *labour* con un 0.006. En este punto, es importante notar que al igual que en marzo del 2016 (time slide anterior), la palabra *film* es una palabra influyente en el tópico, sin embargo, habla sobre el tema de entretención, más que de política.\n",
     "* Segundo Tópico: Entretenimiento. La palabra *music* es la que más influye en el tópico con una proporción de 0.011, seguida por *show* con 0.008. Es importante notar, que la palabra *film* sigue sin aparecer entre el top 20 palabras del tópico.\n",
     "* Tercero Tópico: Tecnología. La palabra más influyente es *use* y *technology* con una proporción del tópico de 0.007 cada una, seguida por *users*, *could* y *many* con 0.06. Sin embargo, se esperaría que las palabras que le siguen como *net*, *online* e *information* tuvieran mayor proporción que *could*, dado que no entrega información descriptiva.\n",
     "* Cuarto Tópico: Negocio. La palabra *market* es la más influyente con una proporción de 0.005, seguido de palabras como *last* y *growth* con una proporción de 0.004. Cabe destacar que el tópico aún está relacionado con *government*, dado que aparece una palabra dentro del top-20 con una proporción de 0.003.\n",
-    "* Quinto Tópico: Deporte. La palabra más influyente es *game* con una proporción de 0.006, seguido de palabras como *club*, *chelsea*, *united* y *players* con una proporción de 0.005."
+    "* Quinto Tópico: Deporte. La palabra más influyente es *game* con una proporción de 0.006, seguido de palabras como *club*, *chelsea*, *united* y *players* con una proporción de 0.005. La única diferencia que tiene con el mismo tópico del slide anterior, es que aparece la palabra *get* en vez de *manchester*, pero con la misma ponderación, lo que no produce una diferencia significativa."
    ]
   },
   {
@@ -957,14 +946,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Al analizar el tercer time slide, es posible observar como el comportamiento de cada tópico de mantiene, no hay algúna separación o unión de algún tópico. \n",
     "* Primer Tópico: Política. La palabra que tiene mayor infuencia es *government* con una proporción de 0.007, seguida por palabras como *blair*, *film* y *labour* con un 0.006. En este punto, es importante notar que la palabra *film* aún permanece como una palabra influyente en el tópico, sin embargo, ésta habla sobre el tema de entretención, más que de política.\n",
     "* Segundo Tópico: Entretenimiento. La palabra *music* es la que más influye en el tópico con una proporción de 0.011, seguida por *show* con 0.008. Es importante notar, que la palabra *film* tampoco aparece entre el top 20 palabras del tópico.\n",
-    "* Tercero Tópico: Tecnología. La palabra más influyente es *use* y *technology* con una proporción del tópico de 0.007 cada una, seguida por *users*, *could* y *many* con 0.06. Sin embargo, se esperaría que las palabras que le siguen como *net*, *online* e *information* tuvieran mayor proporción que *could*, dado que no entrega información descriptiva.\n",
+    "* Tercero Tópico: Tecnología. La palabra más influyente es *use* y *technology* con una proporción del tópico de 0.007 cada una, seguida por *users*, *could* y *many* con 0.06. Sin embargo, se esperaría que las palabras que le siguen como *net*, *online* e *information* tuvieran mayor proporción que *could*, dado que no entrega información descriptiva. La única diferencia de este tópico respecto al mismo tópico en los slides anteriores es que aparece la palabra *system* en vez de *data*, pero con la misma ponderación.\n",
     "* Cuarto Tópico: Negocio. La palabra *market* es la más influyente con una proporción de 0.005, seguido de palabras como *last* y *growth* con una proporción de 0.004. Cabe destacar que el tópico está relacionado con *government*, dado que aparece una palabra dentro del top-20 con una proporción de 0.003.\n",
-    "* Quinto Tópico: Deporte. La palabra más influyente es *game* con una proporción de 0.006, seguido de palabras como *club*, *chelsea*, *united* y *players* con una proporción de 0.005."
+    "* Quinto Tópico: Deporte. La palabra más influyente es *game* con una proporción de 0.006, seguido de palabras como *club*, *chelsea*, *united* y *players* con una proporción de 0.005. La única diferencia que tiene con el mismo tópico del primer slide, es que aparece la palabra *get* en vez de *manchester*, pero con la misma ponderación, lo que no produce una diferencia significativa."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para este corpus se ve que no existe una evolución a través de ellos, la mayor diferencia es el orden en que se muestran las top-20 palabras, sin embargo, todas mantienen su proporción del corpus. No obstante, cabe destacar que DTM realiza una descripción de tópicos mucho mejor que LDA, dado que es posible identificar claramente los cinco temas del corpus."
    ]
   },
   {
@@ -1013,18 +1012,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "El documuento 588 del corpus **sadsad**\n",
+    "Es posible asumir que el documuento 588 del corpus trata sobre la película **Aviator**, por el hecho que aparece esta palabra, también porque se menciona a Leonardo Dicaprio y a Howard Hughes, actor y personaje de la película, respectivamente. Película que trata de Howard Hughes un hombre prestigioso en el mundo del cine y la aviación. También habla de la película **Comedy Meet The Fockers**, debido a que también aparecen los nombres de los actores que la protagonizan Robert De Niro, Dustin Hoffman y Barbra Streisand.\n",
     "\n",
     "En el documento, los tópicos están presentes mediante una distribución de probabilidad:\n",
-    "* El primer tópico, el de entretenimiento está presente en un  25.9%\n",
+    "* El primer tópico, el de política está presente en un  25.9%\n",
     "* El segundo tópico, entretenimiento está presente en un 58.9%\n",
     "* El tercer tópico, tecnología está presente en un 8.4%\n",
     "* El cuarto tópico, negocio está presente en un 5.4%\n",
     "* El quinto tópico, deporte está presente en tan solo un 1.2%\n",
     "\n",
-    "Está distribución se condice completamente con lo que el documento está hablando, que es de **....**"
+    "Está distribución se condice completamente con lo que el documento está hablando, entretención, dado que de partida se está hablando de dos películas, y una que en sí trata de un apacionado del cine, por lo que tiene mucho sentido que más de la mitad del documento hable del tópico de entretenimiento. Luego, el siguiente tópico harta presencia en el documento, un cuarto de este, es política dado que habla con palabras como *presidente*, *lord* que son claaves en este ámbito."
    ]
   },
   {
@@ -1294,6 +1296,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al observar las visualizaciones entregadas por pyLDAvis, concuerdan correctamente con los expuestos anteriormente sin visualización. Acá, igualmente se ve que los tópicos no tienen una variabilidad significante."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -1301,7 +1310,9 @@
    "source": [
     "[//]: <> (quinta pregunta Compare los resultados obtenidos con el modelo LDA de la sección anterior, con los resultados de ldaseq ¿Que modelo logra representar mejor el corpus de documentos usado? ¿Como influye en el entrenamiento de los tópicos la consideración de los intervalos de tiempo?.)\n",
     "\n",
-    "Al comparar los resultados entregados por LDA y LdaSeq es posible determinar que para este corpus son mejores los resultados entregados por el algoritmo de LdaSeq."
+    "Al comparar los resultados entregados luego de entrenar el corpus mediantes LDA y LdaSeq, es posible determinar que para este corpus es mejor el resultado entregado por el algoritmo de LdaSeq. Dado que por un lado LDA no permite distinguir ningún tópico claramente, independiente de la cantidad de tópicos a obtener, mienter que LdaSeq permite identificar claramente los 5 temas que trata el corpus en un tópico cada uno: entretención, política, negocios, deporte y tecnología. \n",
+    "\n",
+    "Por otro lado, los intervalos de tiempo difieren muy poco entre sí, sin embargo el método que considera éstos, DTM, entrega mejores resultados semánticos a través del corpus."
    ]
   }
  ],
